Update index .html

--- a/index .html
+++ b/index .html
@@ -53,7 +53,7 @@
 <body>
   <div class="container">
     <h1>My Autobiography</h1>
-    <img src="/storage/emulated/0/DCIM/Camera/IMG_20250408_104126.jpg" alt="My Photo" class="photo">
+    <img src="IMG_20250408_104126.jpg" alt="My Photo" class="photo">
     
     <h2>Basic Information</h2>
     <p><strong>Name:</strong> Jepherson P. Donggon Jr.</p>
